[package]
name = "graph_match"
version = "0.5.0"
authors = ["Charlie Egan <git@charlieegan3.com>"]
repository = "https://github.com/charlieegan3/graph_match"
readme = "README.md"
license = "MIT"
keywords = ["graph", "pattern"]
description = """
A library for matching patterns in directed graphs.
"""

[dependencies]
